@@ -1,4 +1,5 @@
 4.1.5
+ * Make queries visible to the "system_views.queries" virtual table at the coordinator level (CASSANDRA-19577)
  * Concurrent equivalent schema updates lead to unresolved disagreement (CASSANDRA-19578)
  * Fix hints delivery for a node going down repeatedly (CASSANDRA-19495)
  * Do not go to disk for reading hints file sizes (CASSANDRA-19477)
